fix broken stylesheet in chrome

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -349,6 +349,7 @@ form
       font-size: 10px
     .winners
       margin-top: 10px
+      float: right
 
       img.gravatar
         width: 30px
